fix: overflow hidden on flex item

--- a/src/app/shared/styles/app/flex.scss
+++ b/src/app/shared/styles/app/flex.scss
@@ -25,6 +25,7 @@
     // IE needs units for flex basis for some reason
     // See: https://github.com/philipwalton/flexbugs#flexbug-4
     flex: 1 0 0px;
+    overflow: hidden;
   }
 }
 
